<resources>
    <string name="app_name">Swapsavvy</string>

    <string name="logo_description">Logo description</string>
    <string name="nom">Nom</string>
    <string name="prenom">Prénom</string>
    <string name="email">Email</string>
    <string name="mot_de_passe">Mot de passe</string>
    <string name="confirm_password">Confirmation de Mot de passe</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="login">Se connecter</string>
    <string name="register">S\'inscrire</string>
    <string name="objet_image"></string>
</resources>